--- a/my-journal-app/src/app/app.component.html
+++ b/my-journal-app/src/app/app.component.html
@@ -1,25 +1,1 @@
-<div class="wrapper">
-  <div class="entry">
-    <form>
-    <input type="text" id="title" placeholder="Title...">
-    <hr>
-    <div class="textarea-wrap">
-      <textarea name="text" class="textarea" cols="30" rows="10"></textarea>
-    </div>
-
-    <div>
-      <button disabled>Edit</button>
-      <button>Save</button>
-      <!--with a popup, are you sure you want to delete?-->
-      <button class="">Delete</button>
-    </div>
-  </form>
-</div>
-
-  <div class="my-entrys">
-    <div class="entrys-title">
-      <h1>My Entrys</h1>
-    </div>
-  </div>
-
-</div>
+<app-start-page></app-start-page>
