can save data but once, no array

--- a/my-journal-app/src/app/start/start-page/start-page.component.css
+++ b/my-journal-app/src/app/start/start-page/start-page.component.css
@@ -61,6 +61,7 @@
   border-radius: 5px;
   border: none;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 #save-btn {
@@ -78,14 +79,55 @@
   margin-left: 1rem;
 }
 
+.entrys-title-header {
+  height: 3rem;
+  width: 18rem;
+  background-color: rgb(203, 203, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .my-entrys {
   overflow-y:scroll;
   height: 80vh;
 }
 
-.entrys-title-header {
-  height: 3rem;
-  width: 18rem;
-  background-color: rgb(203, 203, 255);
+/*display a new box of title and description of journal*/
+
+.list-entry {
+  margin-top: 0.5rem;
+}
+
+.entrys-title {
+  text-align: center;
+}
+
+.title-journal-div {
+  background-color: rgb(255, 255, 255, 0.7);
+  margin: 0;
+  height: 2rem;
+  width: 16.5rem;
+  display: flex;
+ align-items: center;
+}
+
+.title-text {
+  margin-left: 0.5rem;
+}
+
+.desc-div {
+  width: 16.5rem;
+  background-color: rgba(255,255,255,0.2);
+  height: 3.5rem;
+}
+
+.desc-div > p {
+  padding: 0.5rem;
+
+}
+
+.desc-text {
   margin: 0;
 }
+
