--- a/my-journal-app/src/app/start/start-page/start-page.component.html
+++ b/my-journal-app/src/app/start/start-page/start-page.component.html
@@ -1,6 +1,6 @@
-<div class="wrapper">
 
-  <form  (ngSubmit)="onSave()" #f="ngForm" class="form-entry">
+
+  <form  (ngSubmit)="onAddNote(f)" #f="ngForm" class="form-entry">
   <input
   type="text"
   id="title"
@@ -22,31 +22,16 @@
   </div>
 
   <div class="btn-wrapper">
-    <button type="submit" id="save-btn" [disabled]="!f.valid" class="buttons">Save</button>
-    <!--with a popup, are you sure you want to delete?-->
-    <button type="button" id="delete-btn" class="buttons">Delete</button>
+    <!--save note btn-->
+    <button type="submit" id="save-btn" [disabled]="!f.valid" class="buttons">{{ editMode ? 'Update' : 'Save' }}</button>
+
+
+    <!-- DELETE BTN add a popup?, are you sure you want to delete?-->
+    <button type="button" id="delete-btn" class="buttons" (click)="onDelete()" *ngIf="editMode">Delete</button>
+
+    <!--clear all input btn-->
+    <button class="buttons" type="button" (click)="onClear()">Clear</button>
   </div>
 </form>
 
 
-<!--display my entrys-->
-<div class="my-entrys-wrapper">
-  <div class="entrys-title-header">
-    <h1 class="entrys-title">My Entrys</h1>
-  </div>
-
-
-  <div class="my-entrys">
-    <div class="list-entry">
-    <a>
-      <div class="title-journal-div">
-      <h3 class="title-text">{{ datas.title }}</h3>
-    </div>
-    <div class="desc-div">
-      <p class="desc-text">{{ datas.desc }}</p>
-    </div>
-      </a>
-    </div>
-  </div>
-
-</div>
