--- a/my-journal-app/src/app/start/start-page/start-page.component.css
+++ b/my-journal-app/src/app/start/start-page/start-page.component.css
@@ -1,6 +1,4 @@
 
-
-
 /*whole form of journal entry block*/
 .form-entry {
   width: 40vw;
@@ -15,7 +13,7 @@
   outline: none;
   font-size: 2rem;
   margin: 1.5rem 0 0.8rem 1.5rem;
-
+  width: 85%;
 }
 
 .textarea-wrap {
